@@ -35,10 +35,16 @@ PKG_CHECK_MODULES(GTKSRC, $GTKSRC_MODULES)
 AC_SUBST(GTKSRC_CFLAGS)
 AC_SUBST(GTKSRC_LIBS)
 
-GLIBMODULES_MODULES="gmodule-2.0 >= 2.32.4"
-PKG_CHECK_MODULES(GLIBMODULES, $GLIBMODULES_MODULES)
-AC_SUBST(GLIBMODULES_CFLAGS)
-AC_SUBST(GLIBMODULES_LIBS)
+GLIB_MODULES="gmodule-2.0 >= 2.32.4"
+PKG_CHECK_MODULES(GLIB, $GLIB_MODULES)
+AC_SUBST(GLIB_CFLAGS)
+AC_SUBST(GLIB_LIBS)
+
+#GTKSPELL_MODULES="gtkspell3-2.0 >= 3.0.0"
+#PKG_CHECK_MODULES(GTKSPELL, $GTKSPELL_MODULES)
+#AC_SUBST(GTKSPELL_CFLAGS)
+#AC_SUBST(GTKSPELL_LIBS)
+
 
 AC_MSG_CHECKING(whether to build gtk-doc viewer)
 AC_ARG_ENABLE(docviewer,AS_HELP_STRING([--enable-docviewer],[Build the Gtk-Doc viewer]),
